--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-transformer-sharp": "^2.2.7",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
+    "ol": "^6.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.7.3",
+    "@types/openlayers": "^4.6.17",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-helmet": "^5.0.9",
