--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.7.3",
+    "@types/ol": "^5.3.6",
     "@types/openlayers": "^4.6.17",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
